# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/communication/dsoftbus/dsoftbus.gni")

config("bus_center_server_interface") {
  include_dirs = [
    "ipc/include",
    "service/include",
    "interface",
    "$dsoftbus_root_path/interfaces/kits",
    "$dsoftbus_root_path/interfaces/kits/bus_center",
    "$dsoftbus_root_path/interfaces/kits/common",
    "$dsoftbus_root_path/core/connection/interface",
    "$dsoftbus_root_path/core/common/softbus_property/include",
    "$softbus_adapter_config/spec_config",
  ]
}
if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  if (ohos_kernel_type == "liteos_m") {
  } else {
    shared_library("dsoftbus_bus_center_server") {
      sources = [
        "ipc/small_system/src/bus_center_client_proxy.c",
        "ipc/small_system/src/lnn_bus_center_ipc.c",
        "lnn/net_builder/src/lnn_connection_fsm.c",
        "lnn/net_builder/src/lnn_discovery_manager.c",
        "lnn/net_builder/src/lnn_net_builder.c",
        "lnn/net_builder/src/lnn_network_id.c",
        "lnn/net_builder/src/lnn_node_weight.c",
        "lnn/net_builder/src/lnn_state_machine.c",
        "lnn/net_builder/sync_info/src/lnn_exchange_device_info.c",
        "lnn/net_builder/sync_info/src/lnn_sync_item_info.c",
        "lnn/net_buscenter/src/lnn_ip_network_impl.c",
        "lnn/net_buscenter/src/lnn_network_manager.c",
        "monitor/src/lnn_event_monitor.c",
        "service/src/bus_center_event.c",
        "service/src/bus_center_manager.c",
      ]
      if (enable_auto_networking == true) {
        sources += [ "lnn/net_builder/src/lnn_coap_discovery_impl.c" ]
      }
      include_dirs = [
        "ipc/small_system/include",
        "lnn/lane_hub/lane_manager/include",
        "lnn/lane_hub/time_sync/include",
        "lnn/net_builder/include",
        "lnn/net_builder/sync_info/include",
        "lnn/net_ledger/common/include",
        "lnn/net_ledger/distributed_ledger/include",
        "lnn/net_ledger/local_ledger/include",
        "$dsoftbus_root_path/core/adapter/bus_center/include",
        "$softbus_adapter_common/include",
        "$dsoftbus_root_path/core/authentication/interface",
        "$dsoftbus_root_path/core/common/include",
        "$dsoftbus_root_path/core/common/inner_communication",
        "$dsoftbus_root_path/core/common/message_handler/include",
        "$dsoftbus_root_path/core/connection/interface",
        "$dsoftbus_root_path/core/transmission/interface",
        "$dsoftbus_root_path/core/transmission/common/include",
        "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
        "$dsoftbus_root_path/interfaces/kits/discovery",
        "$dsoftbus_root_path/core/discovery/interface",
        "$dsoftbus_root_path/core/common/softbus_property/include",
        "$softbus_adapter_config/spec_config",
        "//third_party/bounds_checking_function/include",
        "$hilog_lite_include_path",
        "lnn/net_buscenter/include",
        "monitor/include",
      ]
      cflags = [
        "-Wall",
        "-Werror",
        "-fPIC",
        "-fno-builtin",
        "-std=c99",
      ]
      public_configs = [ ":bus_center_server_interface" ]
      deps = [
        "$dsoftbus_root_path/adapter:softbus_adapter",
        "$dsoftbus_root_path/adapter/common/bus_center:dsoftbus_bus_center_monitor",
        "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
        "$dsoftbus_root_path/core/common/json_utils:json_utils",
        "$dsoftbus_root_path/core/common/log:softbus_log",
        "$dsoftbus_root_path/core/common/message_handler:message_handler",
        "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
        "$dsoftbus_root_path/core/common/utils:softbus_utils",
        "$dsoftbus_root_path/core/connection:softbus_connection",
        "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
        "$dsoftbus_root_path/core/frame/small/client_manager:client_manager",
        "$hilog_lite_deps_path",
        "lnn/lane_hub:dsoftbus_bus_center_hub",
        "lnn/net_ledger:dsoftbus_bus_center_ledger",
        "utils:dsoftbus_bus_center_utils",
        "//build/lite/config/component/cJSON:cjson_shared",
        "//foundation/communication/ipc_lite:liteipc_adapter",
      ]
    }
  }
} else {
  import("//build/ohos.gni")

  ohos_shared_library("dsoftbus_bus_center_server") {
    sources = [
      "ipc/standard_system/src/bus_center_client_proxy.cpp",
      "ipc/standard_system/src/bus_center_client_proxy_standard.cpp",
      "ipc/standard_system/src/lnn_bus_center_ipc.cpp",
      "lnn/net_builder/src/lnn_connection_fsm.c",
      "lnn/net_builder/src/lnn_discovery_manager.c",
      "lnn/net_builder/src/lnn_net_builder.c",
      "lnn/net_builder/src/lnn_network_id.c",
      "lnn/net_builder/src/lnn_node_weight.c",
      "lnn/net_builder/src/lnn_state_machine.c",
      "lnn/net_builder/sync_info/src/lnn_exchange_device_info.c",
      "lnn/net_builder/sync_info/src/lnn_sync_item_info.c",
      "lnn/net_buscenter/src/lnn_ip_network_impl.c",
      "lnn/net_buscenter/src/lnn_network_manager.c",
      "monitor/src/lnn_event_monitor.c",
      "service/src/bus_center_event.c",
      "service/src/bus_center_manager.c",
    ]
    if (enable_auto_networking == true) {
      sources += [ "lnn/net_builder/src/lnn_coap_discovery_impl.c" ]
    }
    include_dirs = [
      "ipc/standard_system/include",
      "lnn/lane_hub/lane_manager/include",
      "lnn/lane_hub/time_sync/include",
      "lnn/net_builder/include",
      "lnn/net_builder/sync_info/include",
      "lnn/net_ledger/common/include",
      "lnn/net_ledger/distributed_ledger/include",
      "lnn/net_ledger/local_ledger/include",
      "$dsoftbus_root_path/core/adapter/bus_center/include",
      "$softbus_adapter_common/include",
      "$dsoftbus_root_path/core/authentication/interface",
      "$dsoftbus_root_path/core/common/include",
      "$dsoftbus_root_path/core/common/message_handler/include",
      "$dsoftbus_root_path/core/connection/interface",
      "$dsoftbus_root_path/core/transmission/interface",
      "$dsoftbus_root_path/core/transmission/common/include",
      "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct/include",
      "$dsoftbus_root_path/interfaces/kits/discovery",
      "$dsoftbus_root_path/core/discovery/interface",
      "$dsoftbus_root_path/core/frame/standard/client/include",
      "$dsoftbus_root_path/core/frame/standard/softbusdata/include",
      "$dsoftbus_root_path/core/common/softbus_property/include",
      "$softbus_adapter_config/spec_config",
      "//utils/system/safwk/native/include",
      "lnn/net_buscenter/include",
      "monitor/include",
    ]

    public_configs = [ ":bus_center_server_interface" ]
    deps = [
      "$dsoftbus_root_path/adapter:softbus_adapter",
      "$dsoftbus_root_path/adapter/common/bus_center:dsoftbus_bus_center_monitor",
      "$dsoftbus_root_path/core/authentication:dsoftbus_auth_server",
      "$dsoftbus_root_path/core/common/json_utils:json_utils",
      "$dsoftbus_root_path/core/common/log:softbus_log",
      "$dsoftbus_root_path/core/common/message_handler:message_handler",
      "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
      "$dsoftbus_root_path/core/common/utils:softbus_utils",
      "$dsoftbus_root_path/core/connection/manager:conn_manager",
      "$dsoftbus_root_path/core/discovery:dsoftbus_disc_server",
      "$dsoftbus_root_path/core/frame/standard/softbusdata:softbus_server_data",
      "$dsoftbus_root_path/core/transmission/trans_channel/proxy:dsoftbus_trans_proxy_channel",
      "$dsoftbus_root_path/core/transmission/trans_channel/tcp_direct:dsoftbus_trans_direct_channel",
      "lnn/lane_hub:dsoftbus_bus_center_hub",
      "lnn/net_ledger:dsoftbus_bus_center_ledger",
      "utils:dsoftbus_bus_center_utils",
      "//utils/native/base:utils",
    ]
    if (is_standard_system) {
      external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "ipc:ipc_core",
      ]
    }
    part_name = "dsoftbus_standard"
    subsystem_name = "communication"
  }
}
